[package]
name = "pvsss"
version = "0.1.0"
authors = ["Rui Morais <ruipedromorais11@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
curve25519-dalek = "2.0.0"
rand = "0.7.3"
sha2 = "0.8.1"
bulletproofs = "2.0.0"
merlin = "2.0.0"
